<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.home.HomeActivity">

    <data>

        <import type="android.view.View" />

        <variable
            name="medicine"
            type="com.test.app.data.model.Medicine" />

        <variable
            name="viewModel"
            type="com.test.app.ui.medine_detail.MedicineDetailViewModel" />
    </data>


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/Toolbar"
            app:elevation="@dimen/_3sdp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:subtitleTextColor="@color/white"
            app:title="@string/medicine_detail"
            app:titleTextAppearance="@style/Toolbar.TitleText" />

        <ImageView
            android:id="@+id/ivMedicine"
            android:layout_width="0dp"
            android:layout_height="@dimen/_160sdp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_25sdp"
            app:imageDrawable="@{@drawable/medicine}"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <TextView
            android:id="@+id/tvBrandName"
            style="@style/TextStyle.Medium"
            android:layout_marginLeft="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_12sdp"
            android:ellipsize="end"
            android:fontFamily="@font/roboto_medium"
            android:text="@{medicine.brandname}"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivMedicine"
            tools:text="Althrocin 500mg Tablet 10'S" />

        <TextView
            android:id="@+id/tvGenName"
            style="@style/TextStyle.Small"
            android:layout_marginLeft="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_2sdp"
            android:layout_marginRight="@dimen/_12sdp"
            android:text="@{medicine.genericdosage}"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvBrandName"
            tools:text="CLOPIDOGREL 75MG" />

        <TextView
            android:id="@+id/tvPackSize"
            style="@style/TextStyle.Small"
            android:layout_marginLeft="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_1sdp"
            android:layout_marginRight="@dimen/_12sdp"
            android:text="@{medicine.packsize+` `+medicine.drugtype.toLowerCase()}"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvGenName"
            tools:text="10 Tablets" />

        <TextView
            android:id="@+id/tvMrp"
            style="@style/TextStyle.Small"
            android:layout_marginLeft="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/mrp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPackSize" />

        <TextView
            android:id="@+id/tvPrice"
            style="@style/TextStyle.Small"
            android:layout_marginLeft="@dimen/_5sdp"
            android:fontFamily="@font/roboto_medium"
            android:text="@{@string/rs(medicine.price)}"
            app:layout_constraintLeft_toRightOf="@+id/tvMrp"
            app:layout_constraintTop_toTopOf="@+id/tvMrp"
            tools:text="₹10" />

        <TextView
            android:id="@+id/tvDisPrice"
            style="@style/TextStyle.Small"
            android:layout_marginLeft="@dimen/_5sdp"
            android:fontFamily="@font/roboto_medium"
            android:text="@{@string/rs(medicine.sellingprice)}"
            android:textColor="@color/green"
            android:visibility="@{medicine.price.equalsIgnoreCase(medicine.sellingprice) ? View.GONE : View.VISIBLE}"
            app:layout_constraintLeft_toRightOf="@+id/tvPrice"
            app:layout_constraintTop_toTopOf="@+id/tvMrp"
            tools:text="₹10" />

        <TextView
            android:id="@+id/tvCompName"
            style="@style/TextStyle.Small"
            android:layout_marginLeft="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginRight="@dimen/_12sdp"
            android:text="@{`Sold By : `+medicine.company}"
            android:textSize="@dimen/_11sdp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPrice"
            tools:text="Sold By : ARETAEUS PHARMACEUTICALS PVT LTD" />


        <TextView
            android:id="@+id/tvCimsCat"
            style="@style/TextStyle.Small"
            android:layout_marginLeft="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginRight="@dimen/_12sdp"
            android:text="@{`CIMS Category : `+medicine.cimscategory}"
            android:textSize="@dimen/_11sdp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvCompName"
            tools:text="CIMS Category : ARETAEUS PHARMACEUTICALS PVT LTD" />

        <TextView
            android:id="@+id/tvCimsSubCat"
            style="@style/TextStyle.Small"
            android:layout_marginLeft="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginRight="@dimen/_12sdp"
            android:text="@{`CIMS Subcategory : `+medicine.cimssubcategory}"
            android:textSize="@dimen/_11sdp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvCimsCat"
            tools:text="CIMS Subcategory : ARETAEUS PHARMACEUTICALS PVT LTD" />

        <Button
            style="@style/Button.Primary"
            android:layout_width="0dp"
            android:layout_margin="@dimen/_20sdp"
            android:onClick="@{() -> viewModel.addToCart()}"
            android:text="@string/add_to_cart"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />


    </android.support.constraint.ConstraintLayout>

</layout>
